Title screen and more
Improved title screen ; new Continue button ; now store the player's progression after refresh.
6 levels to play !
PB : Night 4.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 
 <body>
 
-    <input id="textInput" type="text" placeholder="enter a command here" class="search"/>
+    <input id="textInput" type="text" placeholder="enter a command here" class="search" />
 
     <div></div>
 
-    <canvas id="myCanvas" width="1500" height="600" >
+    <canvas id="myCanvas" width="1500" height="600">
         Your browser does not support the canvas element.
     </canvas>
 
-    <button class="button" id="btn_newgame">New Game</button>
-    <button class="button" id="btn_continue">Continue</button>
+    <div>
+        <button class="button" id="newGameOrMenuButton">New Game</button>
+        <button class="button" id="continueButton">Continue</button>
+    </div>
 
     <script src="data/bots.js"></script>
     <script src="data/player.js"></script>
